# src/main/java/com/bernardomg/security/user/data/adapter/outbound/rest/controller/UserController.java
@@ -24,39 +24,36 @@
 
 package com.bernardomg.security.user.data.adapter.outbound.rest.controller;
 
-import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.CachePut;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.Caching;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.bernardomg.data.domain.Page;
 import com.bernardomg.data.domain.Pagination;
 import com.bernardomg.data.domain.Sorting;
+import com.bernardomg.data.web.WebSorting;
 import com.bernardomg.security.access.RequireResourceAccess;
 import com.bernardomg.security.permission.data.constant.Actions;
 import com.bernardomg.security.role.adapter.outbound.cache.RoleCaches;
-import com.bernardomg.security.role.domain.model.Role;
 import com.bernardomg.security.user.data.adapter.outbound.cache.UserCaches;
-import com.bernardomg.security.user.data.adapter.outbound.rest.model.NewUser;
-import com.bernardomg.security.user.data.adapter.outbound.rest.model.UserChange;
-import com.bernardomg.security.user.data.adapter.outbound.rest.model.UserQueryRequest;
+import com.bernardomg.security.user.data.adapter.outbound.rest.model.UserDtoMapper;
 import com.bernardomg.security.user.data.domain.model.User;
 import com.bernardomg.security.user.data.domain.model.UserQuery;
 import com.bernardomg.security.user.data.usecase.service.UserService;
+import com.bernardomg.ucronia.openapi.api.UserApi;
+import com.bernardomg.ucronia.openapi.model.UserChangeDto;
+import com.bernardomg.ucronia.openapi.model.UserCreationDto;
+import com.bernardomg.ucronia.openapi.model.UserPageResponseDto;
+import com.bernardomg.ucronia.openapi.model.UserResponseDto;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.Min;
 
 /**
  * User REST controller.
@@ -65,8 +62,7 @@ import com.bernardomg.security.user.data.usecase.service.UserService;
  *
  */
 @RestController
-@RequestMapping("/security/user")
-public class UserController {
+public class UserController implements UserApi {
 
     /**
      * Service which handles user queries.
@@ -79,103 +75,74 @@ public class UserController {
         this.service = service;
     }
 
-    /**
-     * Deletes a user by its id.
-     *
-     * @param username
-     *            username of the user to delete
-     */
-    @DeleteMapping(path = "/{username}", produces = MediaType.APPLICATION_JSON_VALUE)
+    @Override
+    @RequireResourceAccess(resource = "USER", action = Actions.CREATE)
+    @Caching(put = { @CachePut(cacheNames = UserCaches.USER, key = "#result.content.username") },
+            evict = { @CacheEvict(cacheNames = UserCaches.USERS, allEntries = true) })
+    public UserResponseDto createUser(@Valid UserCreationDto userCreationDto) {
+        final User user;
+
+        user = service.registerNewUser(userCreationDto.getUsername(), userCreationDto.getName(),
+            userCreationDto.getEmail());
+
+        return UserDtoMapper.toResponseDto(user);
+    }
+
+    @Override
     @RequireResourceAccess(resource = "USER", action = Actions.DELETE)
     @Caching(evict = { @CacheEvict(cacheNames = UserCaches.USER),
             @CacheEvict(cacheNames = { UserCaches.USERS, RoleCaches.USER_AVAILABLE_ROLES }, allEntries = true) })
-    public void delete(@PathVariable("username") final String username) {
-        service.delete(username);
+    public UserResponseDto deleteUser(String username) {
+        final User deleted;
+
+        deleted = service.delete(username);
+
+        return UserDtoMapper.toResponseDto(deleted);
     }
 
-    /**
-     * Returns all the users in a paginated form.
-     *
-     * @param request
-     *            query to filter users
-     * @param pagination
-     *            pagination to apply
-     * @param sorting
-     *            sorting to apply
-     * @return a page for the users matching the sample
-     */
-    @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
+    @Override
     @RequireResourceAccess(resource = "USER", action = Actions.READ)
     @Cacheable(cacheNames = UserCaches.USERS)
-    public Page<User> readAll(final UserQueryRequest request, final Pagination pagination, final Sorting sorting) {
-        final UserQuery query;
+    public UserPageResponseDto getAllUsers(@Email @Valid String email, @Valid String username, @Valid String name,
+            @Valid Boolean enabled, @Valid Boolean notLocked, @Valid Boolean notExpired,
+            @Valid Boolean passwordNotExpired, @Min(1) @Valid Integer page, @Min(1) @Valid Integer size,
+            @Valid List<String> sort) {
+        final Pagination pagination;
+        final Sorting    sorting;
+        final Page<User> users;
+        final UserQuery  query;
 
-        query = new UserQuery(request.email(), request.username(), request.name(), request.enabled(),
-            request.notExpired(), request.notLocked(), request.passwordNotExpired());
-        return service.getAll(query, pagination, sorting);
+        pagination = new Pagination(page, size);
+        sorting = WebSorting.toSorting(sort);
+
+        query = new UserQuery(email, username, name, enabled, notLocked, notExpired, passwordNotExpired);
+        users = service.getAll(query, pagination, sorting);
+
+        return UserDtoMapper.toResponseDto(users);
     }
 
-    /**
-     * Reads a single user by its id.
-     *
-     * @param username
-     *            username of the user to read
-     * @return the user for the id, or {@code null} if it doesn't exist
-     */
-    @GetMapping(path = "/{username}", produces = MediaType.APPLICATION_JSON_VALUE)
+    @Override
     @RequireResourceAccess(resource = "USER", action = Actions.READ)
     @Cacheable(cacheNames = UserCaches.USER)
-    public User readOne(@PathVariable("username") final String username) {
-        // TODO: maybe optionals must be unwrapped automatically
-        return service.getOne(username)
-            .orElse(null);
+    public UserResponseDto getOneUser(String user) {
+        final Optional<User> found;
+
+        found = service.getOne(user);
+
+        return UserDtoMapper.toResponseDto(found);
     }
 
-    /**
-     * Creates a user.
-     *
-     * @param request
-     *            user to add
-     * @return the new user
-     */
-    @PostMapping(produces = MediaType.APPLICATION_JSON_VALUE)
-    @ResponseStatus(HttpStatus.CREATED)
-    @RequireResourceAccess(resource = "USER", action = Actions.CREATE)
-    @Caching(put = { @CachePut(cacheNames = UserCaches.USER, key = "#result.username") },
-            evict = { @CacheEvict(cacheNames = UserCaches.USERS, allEntries = true) })
-    public User registerNewUser(@RequestBody final NewUser request) {
-        return service.registerNewUser(request.username(), request.name(), request.email());
-    }
-
-    /**
-     * Updates a user.
-     *
-     * @param username
-     *            username of the user to update
-     * @param request
-     *            updated user data
-     * @return the updated user
-     */
-    @PutMapping(path = "/{username}", produces = MediaType.APPLICATION_JSON_VALUE)
+    @Override
     @RequireResourceAccess(resource = "USER", action = Actions.UPDATE)
-    @Caching(put = { @CachePut(cacheNames = UserCaches.USER, key = "#result.username") }, evict = {
+    @Caching(put = { @CachePut(cacheNames = UserCaches.USER, key = "#result.content.username") }, evict = {
             @CacheEvict(cacheNames = { UserCaches.USERS, RoleCaches.USER_AVAILABLE_ROLES }, allEntries = true) })
-    public User update(@PathVariable("username") final String username, @RequestBody final UserChange request) {
-        final User             user;
-        final Collection<Role> roles;
+    public UserResponseDto updateUser(String username, @Valid UserChangeDto userChangeDto) {
+        final User toUpdate;
+        final User updated;
 
-        if (request.roles() == null) {
-            roles = List.of();
-        } else {
-            roles = request.roles()
-                .stream()
-                .map(r -> new Role(r, List.of()))
-                .toList();
-        }
-        user = new User(request.email(), username, request.name(), request.enabled(), request.passwordNotExpired(),
-            false, false, roles);
-
-        return service.update(user);
+        toUpdate = UserDtoMapper.toDomain(userChangeDto, username);
+        updated = service.update(toUpdate);
+        return UserDtoMapper.toResponseDto(updated);
     }
 
 }
